[package]
name = "rebarchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.160", features = ["derive"]}
dotenv = "0.15.0"
tokio-postgres = "0.7.8"
tokio = "1.28.0"
serde_json = "1.0.96"
actix-files = "0.6.2"
